awesometournament/src/main/webapp/css/tournament.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap");

:root {
    --primary-color: #185ee0;
    --secondary-color: #e6eef9;
}

*,
*:after,
*:before {
    box-sizing: border-box;
}

body {
    font-family: Arial, sans-serif;
    background-color: rgba(230, 238, 249, 0.5);
}

.custom-container {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 20px 0;
}

.tabs {
    display: flex;
    position: relative;
    background-color: #fff;
    box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15), 0 6px 12px 0 rgba(24, 94, 224, 0.15);
    padding: 0.75rem;
    border-radius: 99px;
    * {
        z-index: 2;
    }
}

input[type="radio"] {
    display: none;
}

.tab {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 54px;
    width: 200px;
    font-size: 1.25rem;
    font-weight: 500;
    border-radius: 99px;
    cursor: pointer;
    transition: color 0.15s ease-in;
}

.notification {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 2rem;
    height: 2rem;
    margin-left: 0.75rem;
    border-radius: 50%;
    background-color: var(--secondary-color);
    transition: 0.15s ease-in;
}

input[type="radio"] {
    &:checked {
        & + label {
            color: var(--primary-color);
            & > .notification {
                background-color: var(--primary-color);
                color: #fff;
            }
        }
    }
}

input[id="radio-1"] {
    &:checked {
        & ~ .glider {
            transform: translateX(0);
        }
    }
}

input[id="radio-2"] {
    &:checked {
        & ~ .glider {
            transform: translateX(100%);
        }
    }
}

input[id="radio-3"] {
    &:checked {
        & ~ .glider {
            transform: translateX(200%);
        }
    }
}

.glider {
    position: absolute;
    display: flex;
    height: 54px;
    width: 200px;
    background-color: var(--secondary-color);
    z-index: 1;
    border-radius: 99px;
    transition: 0.25s ease-out;
}

@media (max-width: 700px) {
    .tabs {
        transform: scale(0.6);
    }
}

.table-container {
    width: 80%;
    padding-top: 3%;
    margin-left: auto;
    margin-right: auto;
}

.table-responsive {
    overflow-x: auto;
}

.table-hover td, .table-hover th {
    vertical-align: middle;
    text-align: center;
}

.table-hover .team-column {
    text-align: left;
    display: flex;
    align-items: center;
}

.logo {
    width: auto;
    height: 60px;
    margin-right: 10px;
    vertical-align: middle;
}

.main-logo {
    width:7%;
    height:auto;
}

.logo-img {
    width: auto;
    height: 45px;
}

a.link {
    text-decoration: none;
    color: inherit;
}

a.link:hover {
    text-decoration: underline;
    color: inherit;
}

ul {
    list-style-type: none;
    padding: 0;
}

li.match {
    margin-bottom: 10px;
    padding: 10px;
    background-color: #f9f9f9;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

li.match:hover {
    background-color: #e9e9e9;
}

.match-detail {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin-bottom: 10px;
    padding: 10px;
    background-color: #fff;
    border-radius: 5px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
}

.team-detail,
.score {
    margin-top: 12px;
    display: flex;
    flex-direction: column;
    align-items: center;
    flex: 1;
}

.team-detail {
    align-items: flex-start;
}

.team2-detail {
    align-items: flex-end;
}

.score {
    flex: 0 1 200px;
    justify-content: center;
}

.team1-detail img {
    margin-right: 15px;
    margin-left: 5px;
}

.team2-detail img {
    margin-right: 5px;
    margin-left: 15px;
}

.match-date {
    font-size: 0.8em;
    color: grey;
    display: inline;
}

#match-link {
    text-decoration: none;
    color: black;
}

.inline-container {
    display: flex;
    align-items: center;
}

.centered-container {
    display: flex;
    justify-content: center;
    margin-bottom: 10px;
    width: 100%;
}

#matchFilter {
    padding: 5px 10px;
    border-radius: 5px;
    background-color: #fff;
    border: 1px solid #ccc;
}

.button-separator {
    margin-left: 1%;
}

